test/error/wrap2.luau
local ws = coroutine.wrap(function() end)
ws()
coroutine.yield(ws())
